# quantitative-methods

./: README.md  index.html
exercises/: exercise-styles.css  exercise_1_1.html  exercise_1_2.html  exercise_1_3.html  exercise_2_1.html  exercise_2_2.html  exercise_2_3.html
exercises/Introduction_to_machine_learning/: Exercise 3 - Topic Discovery.ipynb  Exercise_1_Computer_Vision.ipynb  Exercise_2_Language_Modelling.ipynb  pyproject.toml  requirements.txt
exercises/Probability_theory_and_statistics/: README.md  exercice_1.ipynb  exercise_2.ipynb  exercise_3.ipynb
lessons/: lesson-styles.css  lesson_01.html  lesson_02.html  lesson_03.html  lesson_04.html  lesson_05.html  lesson_06.html
